--- a/utils/config.json
+++ b/utils/config.json
@@ -1,12 +1,12 @@
 {
-    "Email_Send": "",
-    "Email_Receive": "",
-    "Email_Password": "",
-    "url": "",
-    "ALERT": false,
-    "Threshold": 10,
-    "Thread": false,
-    "Log": false,
-    "Scheduler": false,
-    "Timer": false
+  "Email_Send": "dilanmamanip@gmail.com",
+  "Email_Receive": "dilanmamanip@gmail.com",
+  "Email_Password": "zawp dwpl vsbw pxxu",
+  "url": "http://192.168.8.109:4747/video",
+  "ALERT": false,
+  "Threshold": 10,
+  "Thread": false,
+  "Log": false,
+  "Scheduler": false,
+  "Timer": false
 }
